manifests/utilities/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: pihole
          mountPath: /etc/pihole
          subPath: pihole
        - name: pihole
          mountPath: /etc/dnsmasq.d
          subPath: dnsmasq
        readinessProbe:
          tcpSocket:
            port: 80
      - name: cloudflared
        image: klutchell/cloudflared:2019.12.0
      volumes:
      - name: pihole
        persistentVolumeClaim:
          claimName: pihole
