manifests/utilities/pihole/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
spec:
  selector:
    app: pihole
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  externalIPs:
  - 192.168.1.138
  - 192.168.1.141
  - 192.168.1.66
  - 192.168.1.150
