manifests/utilities/pihole/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui
spec:
  selector:
    app: pihole
  ports:
    - port: 8000
      targetPort: 80
      name: pihole-admin
