manifests/utilities/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - pihole.homelab.dsb.dev
    secretName: pihole-tls
  rules:
  - host: pihole.homelab.dsb.dev
    http:
      paths:
      - backend:
          service:
            name: pihole
            port:
              number: 8000
        path: /
        pathType: Prefix
